force-app/main/default/objects/Case/fields/Related_Booking__c.field-meta.xml
<CustomField>
    <fullName>Related_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Booking</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Booking__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.ContactId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>