force-app/main/default/objects/Case/fields/Related_Car__c.field-meta.xml
<CustomField>
    <fullName>Related_Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>