force-app/main/default/objects/Case/fields/Review_ID__c.field-meta.xml
<CustomField>
    <fullName>Review_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Review__c.Booking__c</field>
            <operation>equals</operation>
            <valueField>$Source.Related_Booking__c</valueField>
        </filterItems>
        <filterItems>
            <field>Review__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.ContactId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Review__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>