force-app/main/default/objects/Case/recordTypes/Booking_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Booking_Inquiry</fullName>
    <active>true</active>
    <businessProcess>Booking Inquiry</businessProcess>
    <label>Booking Inquiry</label>
</RecordType>