force-app/main/default/objects/Case/recordTypes/Maintenance_Request.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Request</fullName>
    <active>true</active>
    <businessProcess>Maintenance Request</businessProcess>
    <label>Maintenance Request</label>
</RecordType>