force-app/main/default/objects/Case/recordTypes/Review_Issue.recordType-meta.xml
<RecordType>
    <fullName>Review_Issue</fullName>
    <active>true</active>
    <businessProcess>Review Issue</businessProcess>
    <label>Review Issue</label>

 
  
</RecordType>