force-app/main/default/objects/Case/listViews/Customer_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Support Queue</label>
    <queue>Customer_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>