force-app/main/default/objects/Case/listViews/Fleet_Management_Team_Case.listView-meta.xml
<ListView>
    <fullName>Fleet_Management_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Fleet Management Team</label>
    <queue>Fleet_Management_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>