force-app/main/default/objects/Case/listViews/Manager_Escalation_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Manager_Escalation_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Manager Escalation Queue</label>
    <queue>Manager_Escalation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>